[package]
name = "eaip"
version = "0.3.0"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
description = "Fetch, parse and handle data from electronic aernautical information packages (eAIPs)."
license = "MIT"
homepage = "https://github.com/lilopkins/eaip-rs"
repository = "https://github.com/lilopkins/eaip-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "get_uk_airport_list"
required-features = ["examples"]

[[example]]
name = "get_uk_airport_info"
required-features = ["examples"]

[[example]]
name = "get_uk_navaids"
required-features = ["examples"]

[[example]]
name = "get_uk_intersections"
required-features = ["examples"]

[[example]]
name = "get_uk_airways"
required-features = ["examples"]

[features]
examples = ["tokio", "tokio/rt", "tokio/rt-multi-thread", "tokio/macros", "pretty_env_logger", "anyhow"]
test-online = [ ]

[dependencies]
airac = "0.1"
anyhow = { version = "1.0.57", optional = true }
async-trait = "0.1"
ego-tree = "0.6.2"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = { version = "0.4", optional = true }
regex = "1.5"
reqwest = "0.11"
scraper = "0.13"
tokio = { version = "1.18", optional = true }
url = "2.2"

[dev-dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18", features = [ "rt", "rt-multi-thread", "macros" ] }
